--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Created by Bianca Lee 💖-->
+  <!--Designed and developed by Bianca Lee 💖-->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -12,7 +12,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Bianca Lee 💖</title>
+    <title>Bianca Lee 💫</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
